# automatic-quality-control

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: find_optimal_parameters.py  train_izif_encoder.py  train_svm.py  train_wgangp.py
src/qcs/: feature_selection.py  preprocessing.py
src/qcs/artefacts/: bad_data_line.py  bad_data_point.py  base.py  bias_field.py  empty_line.py  factory.py  folding.py  ghosting.py  gibbs.py  line_shift.py  nobrain.py  noise.py  smoothing.py  susceptibility.py  utils.py  zipper.py
src/qcs/fanogan/: model.py  utils.py
src/qcs/feature_extraction/: deep.py  ksf.py  qcf.py  utils.py
